--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "simple-promise",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "vitest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "prettier": "^3.3.3",
-    "vitest": "^2.1.3"
-  }
+    "name": "simple-promise",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "vitest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "prettier": "^3.3.3",
+        "vitest": "^2.1.3"
+    }
 }
